--- a/jboss.yml
+++ b/jboss.yml
@@ -1,6 +1,13 @@
 ---
 - hosts: all
-  sudo: True
+  sudo: true
   roles:
-    - ansible-jboss
+    - role: ./
+#    - ansible-jboss
 
+  vars:     
+    docker_files_generated_directory: ""
+    docker_files_enable: no       
+       
+#TODO
+#- include: docker/integration-tests.yml
