--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,3 +5,9 @@
   when: jboss_enabled 
   tags: [jboss]
   
+- name: Copy Dockerfile
+  template: src=Dockerfile.j2 dest={{ docker_files_generated_directory }}/Dockerfile mode=0777
+  
+- name: Copy build.sh
+  template: src=build.sh.j2 dest={{ docker_files_generated_directory }}/build.sh mode=0777
+  
