--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,9 @@
   
 - name: Copy Dockerfile
   template: src=Dockerfile.j2 dest={{ docker_files_generated_directory }}/Dockerfile mode=0777
+  when: docker_files_enable
   
 - name: Copy build.sh
   template: src=build.sh.j2 dest={{ docker_files_generated_directory }}/build.sh mode=0777
+  when: docker_files_enable
   
