--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: python
 python: "2.7"
 env:
-  - ANSIBLE_VERSION=1.9.2
+  - ANSIBLE_VERSION=2.1.1
 cache: bundler
 #sudo: false
 sudo: required
@@ -15,10 +15,10 @@ install:
   - sudo pip install ansible==$ANSIBLE_VERSION
 
   # Add ansible.cfg to pick up roles path.
-  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  #- "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
 script:
   - sudo ansible --version
   - export ANSIBLE_ROLES_PATH="../"
 #  - echo localhost > inventory
-  - ansible-playbook -i hosts --syntax-check jboss.yml
-  - ansible-playbook -i hosts --connection=local --sudo -vvvv jboss.yml
+  - sudo ansible-playbook -i hosts --syntax-check jboss.yml
+  - sudo ansible-playbook -i hosts --connection=local --sudo -vvvv jboss.yml
