--- a/jboss.yml
+++ b/jboss.yml
@@ -1,12 +1,12 @@
 ---
 - hosts: all
-  sudo: true
+  become: true
 
   roles:
     - { role: ./,
         docker_files_enable: yes
         #user: "root",
-        #home: "/root"     
+        #home: "/root"
       }
 
 #TODO
