--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,7 +19,8 @@ jboss_full_name         : "{{ jboss_name }}.Final"
 jboss_archive_extracted : "{{ jboss_full_name }}"
 jboss_archive           : "{{ jboss_full_name }}.zip"
 jboss_url               : "http://download.jboss.org/jbossas/7.1/{{ jboss_full_name }}/{{ jboss_archive }}"
-jboss_home_dir          : "{{jboss_base_dir}}/{{jboss_name}}"
+#jboss_home_dir          : "{{jboss_base_dir}}/{{jboss_name}}"
+jboss_link_dir          : "/workspace/{{jboss_name}}"
 
 docker_files_generated_directory: "./"
 docker_files_enable: no
