--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,7 +20,7 @@ jboss_archive_extracted : "{{ jboss_full_name }}"
 jboss_archive           : "{{ jboss_full_name }}.zip"
 jboss_url               : "http://download.jboss.org/jbossas/7.1/{{ jboss_full_name }}/{{ jboss_archive }}"
 #jboss_home_dir          : "{{jboss_base_dir}}/{{jboss_name}}"
-jboss_link_dir          : "/workspace/{{jboss_name}}"
+jboss_link_dir          : "/workspace/{{jboss_full_name}}"
 
 docker_files_generated_directory: "./"
 docker_files_enable: no
